# SyntropicOS

./: .gitignore  404.html  CMakeLists.txt  Doxyfile  LICENSE  NOTICE  README.md  coverage_filtered.info  index.html  library.properties  mkdocs.yml  sitemap.xml  sources.mk
.agents/workflows/: checks.md
.github/workflows/: deploy.yml
api/: index.html
arduino/: index.html
directory-structure/: index.html
docs/: arduino.md  directory-structure.md  getting-started.md  index.md  porting-guide.md  testing.md
docs/api/: index.md
docs/modules/: communication.md  control.md  core.md  debug.md  display.md  drivers.md  dsp.md  integration.md  io.md  multitasking.md  services.md  storage.md  system.md
examples/BiquadFilter/: BiquadFilter.ino
examples/Blink/: Blink.ino
examples/CoapClient/: CoapClient.ino
examples/pico_dual_core/: CMakeLists.txt  main.c  syn_config.h
getting-started/: index.html
porting-guide/: index.html
search/: search_index.json
testing/: index.html
tests/: Makefile.check  Makefile.fuzz  Makefile.unity  gen_gif.c  gen_screenshot.c  test_actuator.c  test_adc.c  test_ao.c  test_autotune.c  test_backoff.c  test_boot.c  test_button.c  test_can.c  test_canopen.c  test_canopen_mgr.c  test_canvas.c  test_cbor.c  test_cia401.c  test_cia402.c  test_cia418.c  test_cli.c  test_coap.c  test_cobs.c  test_coredump.c  test_crc.c  test_crypto.c  test_dac.c  test_dali.c  test_datalog.c  test_dc_motor.c  test_dds.c  test_dma.c  test_dmx512.c  test_dns.c  test_dsp_ext.c  test_encoder.c  test_errlog.c  test_event_flags.c  test_exti.c  test_fault.c  (+88 more)
(+2627 files in other folders)
